improve(textprocessing): load kuromoji jar externally to decrease basic bundle size